[tool.poetry]
name = "crimson"
version = "0.0.0"
description = "Bioinformatics tool outputs converter to JSON or YAML"
authors = ["Wibowo Arindrarto <contact@arindrarto.dev>"]
repository = "https://github.com/bow/crimson"
readme = "README.md"
packages = [{ include = "crimson" }]
include = ["CHANGELOG.rst"]
license = "BSD-3-Clause"
keywords = ["bioinformatics", "json", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",

]

[tool.poetry.scripts]
crimson = "crimson.cli:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "^v?(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"
PyYAML = "^6.0"
single-source = "^0.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.6"
bandit = "^1.7.0"
flake8 = "^5.0.4"
flake8-polyfill = "^1.0.2"
mypy = "^0.982"
mypy-extensions = "^0.4.3"
radon = "^5.0.1"
pytest-flake8 = "^1.0.7"
types-PyYAML = "^6.0.12"
twine = "^4.0.1"
safety = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
