[tool.poetry]
name = "crimson"
version = "0.0.dev0"
description = "Bioinformatics tool outputs converter to JSON or YAML"
authors = ["Wibowo Arindrarto <contact@arindrarto.dev>"]
repository = "https://github.com/bow/crimson"
readme = "README.md"
packages = [{ include = "crimson" }]
include = ["CHANGELOG.rst"]
license = "BSD-3-Clause"
keywords = ["bioinformatics", "json", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",

]

[tool.poetry.scripts]
crimson = "crimson.cli:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "^v?(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0"
click = "^8.1.7"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
pytest-cov = "^5"
pytest-sugar = "^1"
bandit = "^1"
flake8 = "^7"
flake8-polyfill = "^1"
mypy = "^1"
mypy-extensions = "^1"
radon = "^6"
pytest-flake8 = "^1"
types-PyYAML = "^6"
safety = "^3"
platformdirs = "<4.0.0"
pytest = "^8"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "crimson.*"
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
allow_untyped_globals = false
strict_equality = true

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '/(\.eggs|\.git|\.mypy_cache|\.tox|\.venv|_build|build|dist)/'

[tool.coverage.run]
branch = true
source = ["crimson"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
omit = ["tests/*"]

[tool.distutils.bdist_wheel]
universal = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
